# proc-macro2-diagnostics

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: lib.rs  main.rs
src/: diagnostic.rs  ext.rs  lib.rs  line.rs  nightly.rs  stable.rs
tests/nightly/: errors.rs  errors.stderr
tests/stable/: errors.rs  errors.stderr
