[package]
name = "proc-macro2-diagnostics"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Diagnostics for proc-macro2."
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"

[build-dependencies]
version_check = "0.9.1"

[dev-dependencies]
trybuild = "1.0"
diagnostic-example = { path = "example/" }
