[package]
name = "proc-macro2-diagnostics"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Diagnostics for proc-macro2."
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["colors"]
colors = ["yansi"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
yansi = { version = "0.5", optional = true }

[build-dependencies]
version_check = "0.9.1"

[dev-dependencies]
trybuild = "1.0"
diagnostic-example = { path = "example/" }
